<resources>
    <string name="app_name">암기하장</string>
    <string name="about_library">关于该控件</string>
    <string name="about_author">关于开发者</string>
    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="view_swiped_left">%1$s swiped to left!</string>
    <string name="view_swiped_right">%1$s swiped to right!</string>
    <string name="dummy_text">Test</string>
    <string name="dummy_fab">Fab Test</string>
    <string name="subtitle">단어보기</string>
    <string name="addCategory">카테고리 추가</string>
    <string name="addWord">단어추가</string>
    <string name="addSentence">문장추가</string>
    <string name="reset">Reset stack</string>
    <string name="stack_reset">Stack reset!</string>
    <string name="stack_empty">Card stack empty!</string>
    <string name="github">View on GitHub</string>
    <string name="action_settings">Settings</string>
    <string name="wrongN">오답노트</string>
    <string name="nav_sub_menu"></string>
    <string name="instruction">설명서</string>
    <string name="developer">개발자 정보</string>
    <string name="license">라이센스 정보</string>
    <string name="drawer_header_text">암기하장!</string>
    <string name="developer_info">
        - 김서윤 (가천대학교 소프트웨어학과)
            pkhssy@naver.com\n
        - 임예슬 (가천대학교 소프트웨어학과)
            yesll0210@naver.com
    </string>
</resources>