<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_wrongN"
            android:icon="@drawable/ic_instruction"
            android:title="@string/wrongN" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/navigation_item_instruction"
                android:checked="true"
                android:icon="@drawable/ic_showinstruction"
                android:title="@string/instruction" />
            <item
                android:id="@+id/navigation_item_developer"
                android:icon="@drawable/ic_developer"
                android:title="@string/developer" />
            <item
                android:id="@+id/navigation_item_license"
                android:icon="@drawable/ic_license"
                android:title="@string/license" />
        </menu>
    </item>


</menu>